Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:

0.82    make the code more mojoy

0.81    If the service has a 'controller' property, it will get the current
        controller context assigned. This supersedes the 'mojo_*'
        properties, they are now deprecated.

0.80	*** INCOMPATIBLE CHANGES ***
        The QooxdooJsonrpc plugin does not install a /source
        path automatically anymore ... there were too many problem
        with other parts of the application which would need special
        attention to work with relative requests coming from a different
        'path' ... starting with this version, there are now two
        environment variables that govern source mode:

        QX_SRC_MODE=1 will enable serving your application from
        ../frontend/source ... 

        QX_SRC_PATH=/where/ever/source allows to specify some other 
        directory to serve your application from.

0.76    - require mojo 0.34 to make sure we don't run into
          trouble with old versions.

        - ship index.html without redirecting to it ... 
          this makes for nicer urls

        - simplify plugin code a little by using get method when
          setting up routes

0.75    - make plugin in development mode creative in finding
          the qooxdoo source code and contrib downloads

0.74    Mon Arp 04 2011
        - added better __WARN__ handler as suggested by Sebastian Riedel
        - fixed package name in example
        - added pointer to Mojolicious::Plugin::QooxdooJsonrpc in
          MojoX::Dispatcher::Qooxdoo::Jsonrpc documentation
        
0.72    Sat Mar 26 2011
        - send requests and results to log at debug level
        - new module Mojolicious::Plugin::QooxdooJsonrpc makes writing
          applications even simpler. Included support for serving
          both the production and the source version of the application

0.71    Tue Mar 22 2011
        - add utf8 to content_type