@@ -1,6 +1,7 @@
 Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:
 
 0.82    make the code more mojoy
+        rewritten QX_SRC_MODE to be more versatile in serving 'the source'
 
 0.81    If the service has a 'controller' property, it will get the current
         controller context assigned. This supersedes the 'mojo_*'
